--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -51,6 +51,12 @@
 			<trans-unit id="label.stop">
 				<source>Stop</source>
 			</trans-unit>
+			<trans-unit id="label.top">
+            	<source>Top</source>
+            </trans-unit>
+            <trans-unit id="label.bottom">
+            	<source>Bottom</source>
+            </trans-unit>
 
 			<!-- sheets -->
 			<trans-unit id="sheet.owl">
@@ -94,7 +100,7 @@
 				<source>Loop / Carousel</source>
 			</trans-unit>
 			<trans-unit id="settings.common.autoplaySpeed">
-				<source>Autoplay speed.</source>
+				<source>Autoplay speed</source>
 			</trans-unit>
 
 
@@ -361,6 +367,67 @@
 				<source>Next</source>
 			</trans-unit>
 
+            <!-- tinyslider specific settings -->
+            <trans-unit id="settings.tinySlider.mode" xml:space="preserve">
+                <source>Mode</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.axis" xml:space="preserve">
+                <source>Axis</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.items" xml:space="preserve">
+                <source>Items</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.gutter" xml:space="preserve">
+                <source>Gutter</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.edgePadding" xml:space="preserve">
+                <source>Edge Padding</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.fixedWidth" xml:space="preserve">
+                <source>Fixed Width</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.autoWidth" xml:space="preserve">
+                <source>Auto Width</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.viewportMax" xml:space="preserve">
+                <source>Viewport Maximum</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.slideBy" xml:space="preserve">
+                <source>Slide By</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.center" xml:space="preserve">
+                <source>Center</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.controls" xml:space="preserve">
+                <source>Control Buttons</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.controlsPosition" xml:space="preserve">
+                <source>Control Buttons Position</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.controlsContainer" xml:space="preserve">
+            	<source>Control Buttons Container</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.customPrevButton" xml:space="preserve">
+                <source>Custom Previous-Button</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.customNextButton" xml:space="preserve">
+               	<source>Custom Next-Button</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.nav" xml:space="preserve">
+               	<source>Nav Components</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.navPosition" xml:space="preserve">
+               	<source>Nav Components Position</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.navContainer" xml:space="preserve">
+               	<source>Nav Components Container</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.navAsThumbnails" xml:space="preserve">
+               	<source>Nav As Thumbnails</source>
+            </trans-unit>
+            <trans-unit id="settings.tinySlider.arrowKeys" xml:space="preserve">
+               	<source>Arrow Keys</source>
+            </trans-unit>
 		</body>
 	</file>
 </xliff>
