--- a/Resources/Private/Language/locallang_csh_flexforms.xlf
+++ b/Resources/Private/Language/locallang_csh_flexforms.xlf
@@ -8,7 +8,157 @@
 			<trans-unit id="settings.js.mode" xml:space="preserve">
 				<source>Controls animation behaviour. With carousel everything slides to the side, while gallery uses fade animations and changes all slides at once.</source>
 			</trans-unit>
-
+			<trans-unit id="settings.js.axis" xml:space="preserve">
+				<source>The axis of the slider.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.items" xml:space="preserve">
+				<source>Number of slides being displayed in the viewport. If slides less or equal than items, the slider won't be initialized</source>
+			</trans-unit>
+			<trans-unit id="settings.js.gutter" xml:space="preserve">
+				<source>Space between slides (in “px”).</source>
+			</trans-unit>
+			<trans-unit id="settings.js.edgePadding" xml:space="preserve">
+				<source>Space on the outside (in “px”).</source>
+			</trans-unit>
+			<trans-unit id="settings.js.fixedWidth" xml:space="preserve">
+				<source>Controls width attribute of the slides.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.autoWidth" xml:space="preserve">
+				<source>If true, the width of each slide will be its natural width as an inline-block box.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.viewportMax" xml:space="preserve">
+				<source>Maximum viewport width for fixedWidth/autoWidth.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.slideBy" xml:space="preserve">
+				<source>Number of slides going on one “click”.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.center" xml:space="preserve">
+				<source>Center the active slide in the viewport.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.controls" xml:space="preserve">
+				<source>Controls the display and functionalities of controls components (prev/next buttons). If true, display the controls and add all functionalities. For better accessibility, when a prev/next button is focused, user will be able to control the slider using left/right arrow keys.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.controlsPosition" xml:space="preserve">
+				<source>Controls controls position.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.controlsContainer" xml:space="preserve">
+				<source>The container element/selector around the prev/next buttons. controlsContainer must have at least 2 child elements.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.prevButton" xml:space="preserve">
+				<source>Customized previous buttons. This option will be ignored if controlsContainer is a Node element or a CSS selector.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.nextButton" xml:space="preserve">
+				<source>Customized next buttons. This option will be ignored if controlsContainer is a Node element or a CSS selector.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.nav" xml:space="preserve">
+				<source>Controls the display and functionalities of nav components (dots). If true, display the nav and add all functionalities.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.navPosition" xml:space="preserve">
+				<source>Controls nav position.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.navContainer" xml:space="preserve">
+				<source>The container element/selector around the dots. navContainer must have at least same number of children as the slides.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.navAsThumbnail" xml:space="preserve">
+				<source>Indicate if the dots are thumbnails. If true, they will always be visible even when more than 1 slides displayed in the viewport.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.arrowKeys" xml:space="preserve">
+				<source>Allows using arrow keys to switch slides.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.speed" xml:space="preserve">
+				<source>Speed of the slide animation (in “ms”).</source>
+			</trans-unit>
+			<trans-unit id="settings.js.autoplay" xml:space="preserve">
+				<source>Toggles the automatic change of slides.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.autoplayPosition" xml:space="preserve">
+				<source>Controls autoplay position.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.autoplayTimeout" xml:space="preserve">
+				<source>Time between 2 autoplay slides change (in “ms”).</source>
+			</trans-unit>
+			<trans-unit id="settings.js.autoplayDirection" xml:space="preserve">
+				<source>Direction of slide movement (ascending/descending the slide index).</source>
+			</trans-unit>
+			<trans-unit id="settings.js.autoplayHoverPause" xml:space="preserve">
+				<source>Stops sliding on mouseover.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.autoplayButton" xml:space="preserve">
+				<source>The customized autoplay start/stop button or selector.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.autoplayButtonOutput" xml:space="preserve">
+				<source>Output autoplayButton markup when autoplay is true but a customized autoplayButton is not provided.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.autoplayResetOnVisibility" xml:space="preserve">
+				<source>Pauses the sliding when the page is invisible and resumes it when the page become visiable again.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.animateIn" xml:space="preserve">
+				<source>Name of intro animation class.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.animateOut" xml:space="preserve">
+				<source>Name of outro animation class.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.animateNormal" xml:space="preserve">
+				<source>Name of default animation class.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.animateDelay" xml:space="preserve">
+				<source>Time between each gallery animation (in “ms”).</source>
+			</trans-unit>
+			<trans-unit id="settings.js.loop" xml:space="preserve">
+				<source>Moves throughout all the slides seamlessly.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.rewind" xml:space="preserve">
+				<source>Moves to the opposite edge when reaching the first or last slide.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.autoHeight" xml:space="preserve">
+				<source>Height of slider container changes according to each slide’s height.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.lazyload" xml:space="preserve">
+				<source>Enables lazyloading images that are currently not viewed, thus saving bandwidth (see demo).
+                        NOTE:
+                        + Class .tns-lazy-img need to be set on every image you want to lazyload if option lazyloadSelector is not specified;
+                        + data-src attribute with its value of the real image src is required;
+                        + width attribute for every image is required for autoWidth slider.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.lazyloadSelector" xml:space="preserve">
+				<source>The CSS selector for lazyload images.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.touch" xml:space="preserve">
+				<source>Activates input detection for touch devices.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.mouseDrag" xml:space="preserve">
+				<source>Changing slides by dragging them.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.swipeAngle" xml:space="preserve">
+				<source>Swipe or drag will not be triggered if the angle is not inside the range when set.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.preventActionWhenRunning" xml:space="preserve">
+				<source>Prevent next transition while slider is transforming.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.preventScrollOnTouch" xml:space="preserve">
+				<source>Prevent page from scrolling on touchmove. If set to “auto”, the slider will first check if the touch direction matches the slider axis, then decide whether prevent the page scrolling or not. If set to “force”, the slider will always prevent the page scrolling.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.nested" xml:space="preserve">
+				<source>Define the relationship between nested sliders. Make sure you run the inner slider first, otherwise the height of the inner slider container will be wrong.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.freezable" xml:space="preserve">
+				<source>Indicate whether the slider will be frozen (controls, nav, autoplay and other functions will stop work) when all slides can be displayed in one page.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.disable" xml:space="preserve">
+				<source>Disable slider.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.startIndex" xml:space="preserve">
+				<source>The initial index of the slider.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.onInit" xml:space="preserve">
+				<source>Callback to be run on initialization.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.useLocalStorage" xml:space="preserve">
+				<source>Save browser capability variables to localStorage and without detecting them everytime the slider runs if set to true.</source>
+			</trans-unit>
+			<trans-unit id="settings.js.nonce" xml:space="preserve">
+				<source>Optional Nonce attribute for inline style tag to allow slider usage without unsafe-inline Content Security Policy source.</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
